# noteapp

backend/: .gitignore  alembic.ini  pyproject.toml
backend/src/: main.py  settings.py
backend/src/api/: folder_router.py  note_router.py  routers.py  user_router.py
backend/src/auth/: deps.py  models.py  router.py  security.py  service.py
backend/src/db/: base.py  database.py
backend/src/db/migrations/: env.py
backend/src/db/migrations/versions/: 182ef9c326e0_initial.py  36238702111d_make_timestamps_timezone_aware.py  afeade066fec_remove_length_limit_on_content.py  f61b2a037a5f_remove_length_limit_on_content_for_.py
backend/src/db/models/: folder.py  note.py  user.py
backend/src/schemas/: folder.py  note.py  user.py
backend/src/services/: folder_service.py  note_service.py
backend/src/shared/: types.py
backend/tests/: conftest.py  test_user_service.py
frontend/: package-lock.json  package.json
frontend/src/: AppProvider.tsx  main.tsx  routeTree.gen.ts  theme.tsx
frontend/src/api/: api-config.ts  orval.config.ts
frontend/src/components/: ApiCallSnackBar.tsx  Authenticated.tsx  FolderDialog.tsx  NoteCard.tsx  NoteDialog.tsx  ResponsiveAppBar.tsx
frontend/src/context/: appBarContext.tsx  authContext.tsx  drawerContext.tsx
frontend/src/hooks/: useAppBarHeight.ts  useAuth.ts  useFolder.ts  useFolders.ts  useNotes.ts
frontend/src/routes/: __root.tsx  _auth.dashboard.tsx  _auth.folder.$folderId.tsx  _auth.folders.tsx  _auth.note.$noteId.tsx  _auth.notes.tsx  _auth.profile.tsx  _auth.tsx  index.tsx
frontend/src/utils/: auth.ts
(+46 files in other folders)
